--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,7 @@ header {
 
 nav ul {
     display: flex;
-    justify-content: space-between;
-    list-style: none;
+    justify-content: space-around;    list-style: none;
     margin: 0;
     padding: 10px;
 }
