--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,8 @@ header {
 
 nav ul {
     display: flex;
-    justify-content: space-around;    list-style: none;
+    justify-content: space-around;    
+    list-style: none;
     margin: 0;
     padding: 10px;
 }
